<resources>
    <string name="app_name">PRM_G3</string>
    <string name="cooking_guide">🍳 Cooking Guide</string>
    <string name="good_morning_chef">Chào buổi sáng, Chef!</string>
    <string name="search_hint">Tìm công thức, nguyên liệu...</string>
    <string name="featured_today">🔥 Nổi bật hôm nay</string>
    <string name="see_all">Xem tất cả</string>
    <string name="home">Trang chủ</string>
    <string name="favorites">Yêu thích</string>
    <string name="add">Thêm</string>
    <string name="notifications">Thông báo</string>
    <string name="profile">Cá nhân</string>

    <string name="hint_name">Tên của bạn</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_register">Đăng ký</string>
    <string name="tv_no_account">Chưa có tài khoản? Đăng ký</string>
    <string name="tv_has_account">Đã có tài khoản? Đăng nhập</string>


</resources>